cabal-version:      2.4
name:               cardano-tx
version:            0.1.0.0
author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com

common base
    build-depends: base >= 4.14 && < 4.15

common project-config
    default-extensions:
        OverloadedStrings
    default-language:   Haskell2010
    ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -fobject-code
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas

library
    import: base, project-config
    exposed-modules:
        Cardano.Sdk.Adapter.Node.Connection
      , Cardano.Sdk.Adapter.Node.Shared
      , Cardano.Sdk.Adapter.Node.Network
      , Cardano.Sdk.Adapter.Node.UTxO
      , Cardano.Sdk.Adapter.Koios.UTxO
      , Cardano.Sdk.Adapter.DbSync.Datum
      , Cardano.Sdk.Network
      , Cardano.Sdk.UTxO
      , Cardano.Sdk.Address
      , Cardano.Sdk.Script
      , Cardano.Sdk.Transaction.Data
      , Cardano.Sdk.Transaction.BuildTx
      , Cardano.Sdk.Transaction.BalanceTx
      , Cardano.Sdk.Transaction
      , Manual
    build-depends:
        bytestring
      , base16-bytestring 
      , text
      , aeson
      , extra
      , containers
      , rio
      , http-client
      , http-client-tls
      , http-conduit
      , cardano-api
      , cardano-cli
      , ouroboros-network
      , cardano-slotting
      , plutus-core
      , plutus-ledger
      , plutus-ledger-api
      , plutus-tx
      , plutus-tx-plugin
      , serialise
    hs-source-dirs:   src

